Refactoring and improvement of the coverage
